トップ画像微修正

--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,10 @@ footer h4 {
     font-size: 2em;
     font-weight: bold;
   }
-
+  .top_title img {
+    width: 100%;
+    margin: 0 auto;
+  }
   .top_image {
     display: flex;
   }
